modifiche al codice seguendo le regole di SonarLint